--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
  .navlink {
     border: 1.5px solid transparent;
     border-radius: 4px;
-     transition: border-radius 0.5s ease;
+     transition:background 1s ease ,border-radius 1s ease, color 1s ease;
      margin-left: 4px;
      margin-top: 4px;
      width: max-content;
