--- a/src/Components/Home/Services/Services.css
+++ b/src/Components/Home/Services/Services.css
@@ -1,9 +1,21 @@
 .servicebtn {
+    width: 120px;
     border-radius: 5px;
-    transition: background 0.5s ease, border-radius 0.5s ease;
+    transition: font-size 0.5s ease, background 0.5s ease, border-radius 0.5s ease;
 }
 
 .servicebtn:hover {
+    font-size: 15px;
+    border-radius: 13px;
+    background: #282125;
+}
+.serviceshowallbtn {
+    border-radius: 5px;
+    transition: font-size 0.5s ease, background 0.5s ease, border-radius 0.5s ease;
+}
+
+.serviceshowallbtn:hover {
+    font-size: 15px;
     border-radius: 13px;
     background: #282125;
 }
